--- a/SEA_Application/Views/AspNetUser/EditStudent.cshtml
+++ b/SEA_Application/Views/AspNetUser/EditStudent.cshtml
@@ -1578,19 +1578,14 @@ else if (User.IsInRole("Staff"))
 
             // event.preventDefault();
 
-
-
             var id = $("#Id").val();
-            window.open("/AspNetUser/Print?id=" + id, "_blank");
 
-            window.open("/AspNetUser/StudentPrint2?id=" + id, "_blank");
+           window.open("/AspNetUser/Print?id=" + id, "_blank");
 
-
-
+       //  window.open("/AspNetUser/StudentPrint2?id=" + id, "_blank");
 
 
-
-        })
+        });
 
         function readURL(input) {
 
