--- a/SEA_Application/Views/AspNetNotes/PlaceOrder.cshtml
+++ b/SEA_Application/Views/AspNetNotes/PlaceOrder.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "PlaceOrder";
-    Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
+  //  Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
 }
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
 <style>
@@ -24,6 +24,16 @@
     }
 </style>
 
+@if (User.IsInRole("Admin"))
+{
+    Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
+}
+
+else if (User.IsInRole("Receptionist"))
+{
+    Layout = "~/Views/Shared/_ReceptionistDashboardLayout.cshtml";
+
+}
 
 <div class="card">
     <div class="card-body p-4">
@@ -363,13 +373,13 @@
 
                 QuantityJquery.val("1");
 
-              
+
 
                 TotalJquery.val(0);
                 NotesTypeJquery.val(data.NotesType);
                 PriceJquery.val(data.GrandTotal);
 
-                  GetNotesTotalQuantityOne(rowNumber);
+                GetNotesTotalQuantityOne(rowNumber);
             },
             error: function (error) {
 
@@ -383,8 +393,8 @@
 
     function GetNotesTotalQuantityOne(rowNumber) {
 
-      //  var QuantityId = "#Quantity" + rowNumber;
-       // var QuantityJquery = $(QuantityId);
+        //  var QuantityId = "#Quantity" + rowNumber;
+        // var QuantityJquery = $(QuantityId);
         var QuantityVal = 1;
         var PriceId = "#Price" + rowNumber;
         var PriceJquery = $(PriceId);
