--- a/SEA_Application/Views/LedgerGroups/Create.cshtml
+++ b/SEA_Application/Views/LedgerGroups/Create.cshtml
@@ -3,77 +3,125 @@
 @{
     ViewBag.Title = "Create";
 }
+
+
+@if (User.IsInRole("Admin"))
+{
+    Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
+}
+else if (User.IsInRole("Accountant"))
+{
+    Layout = "~/Views/Shared/_AccountantDashboardLayout.cshtml";
+}
+
 <div class="col-md-4 col-sm-4 col-lg-4 tab-pane pull-right" style="margin-left:30px;margin-top:30px" id="changediv">
 
     <div class="form-three widget-shadow">
         @using (Html.BeginForm("LedgerGroupFromFile", "LedgerGroups", FormMethod.Post, new { enctype = "multipart/form-data" }))
-            {
+        {
             @Html.AntiForgeryToken()
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                <div class="control-label col-md-3"><b>Excel File</b></div>
-                <div class="col-md-4">
-                    <input id="teachers" required="required" name="Ledger_Groups" type="file" />
+            @*<div class="form-group">
+                    <div class="control-label col-md-3"><b>Excel File</b></div>
+                    <div class="col-md-4">
+                        <input id="teachers" required="required" name="Ledger_Groups" type="file" />
+                    </div>
                 </div>
-            </div>
 
-                <input class="col-md-4 pull-right" type="submit" value="Submit" style="border-radius:35px;color:white;border:hidden;background-color:#128edb;font-size:11px;width:98px;height:38px;font-family:Montserrat" />
+                <input class="col-md-4 pull-right" type="submit" value="Submit" style="border-radius:35px;color:white;border:hidden;background-color:#128edb;font-size:11px;width:98px;height:38px;font-family:Montserrat" />*@
 
         }
     </div>
 </div>
 
-<div class="col-md-8 col-md-offset-1" style="background-color:#f1f2e5;border-radius:10px;margin-top:50px;box-shadow: rgba(0, 0, 0, 0.16) 5px 10px 5px, rgba(0, 0, 0, 0.23) 0px 3px 5px">
-<h4>Add New Group</h4>
-    
-@using (Html.BeginForm(null, null, FormMethod.Post, new { id = "Registerform" }))
-{
-    @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div>
-            <div class="form-group">
-                <div class="col-md-3">
-                    <span>Ledger Group</span>
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control",@required="required"} })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                </div>
-               </div>
-            @*<div class="form-group">
-                <div class="col-md-3">
-                    <span>Created By</span>
-                    @Html.EditorFor(model => model.CreatedBy, new { htmlAttributes = new { @class = "form-control",@required="required" } })
-                    @Html.ValidationMessageFor(model => model.CreatedBy, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-        </div>
-        <div>
-            <div class="form-group">
-                <br />
-                <div class="col-md-3">
-                    <span>Accounting Head</span>
-                    @Html.DropDownList("LedgerHeadID", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.LedgerHeadID, "", new { @class = "text-danger" })
-                </div>
-            @*<div class="col-md-3">
-                <span>Session</span>
-                @Html.DropDownList("SessionId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.SessionId, "", new { @class = "text-danger" })
-            </div>*@
-        </div>
-        </div>
-        
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-body p-5">
 
-        <div class="form-group">
-            <div class="col-md-5">
-                <br />
-                <button class="col-md-2 form-control" onclick="window.location.href = '/ChartOfAccounts/ChartsOf_Accounts'" style="border-radius:35px;border:hidden;margin-right:10px;background-color:rgb(255, 0, 0);color:white;font-size:11px;width:98px;height:38px;font-family:Montserrat" id="return"><i class="fa fa-arrow-left"></i> &nbsp;&nbsp; Return</button>
-                <input class="col-md-2 form-control" id="submit" form="Registerform" type="submit" value="Save" style="border-radius:35px;color:white;border:hidden;background-color:#128edb;font-size:11px;width:98px;height:38px;font-family:Montserrat" />
+
+
+                @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "Registerform" }))
+                {
+                    @Html.AntiForgeryToken()
+
+                    <div class="form-horizontal">
+                      
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div>
+
+                            <div class="form-group">
+                                <div class="col-md-3">
+                                    <span>Ledger Group</span>
+                                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
+                                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            @*<div class="form-group">
+                                    <div class="col-md-3">
+                                        <span>Created By</span>
+                                        @Html.EditorFor(model => model.CreatedBy, new { htmlAttributes = new { @class = "form-control",@required="required" } })
+                                        @Html.ValidationMessageFor(model => model.CreatedBy, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>*@
+                        </div>
+                        <div>
+                            <div class="form-group">
+                                @*<br />*@
+
+                                <div class="col-md-6">
+                                    <div class="form-row mt-4">
+                                        <div class="form-group col-md-12 bmd-form-group">
+                                            <label for="" class="bmd-label-static pl-2">Accounting Head</label>
+
+                                            @*<select class="form-control" id="LedgerGroupId" name="LedgerGroupId" required></select>*@
+                                            @Html.DropDownList("LedgerHeadID", null, htmlAttributes: new { @class = "form-control" })
+                                            @Html.ValidationMessageFor(model => model.LedgerHeadID, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                </div>
+                                @*<div class="col-md-3">
+            <span>Session</span>
+            @Html.DropDownList("SessionId", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.SessionId, "", new { @class = "text-danger" })
+        </div>*@
+                            </div>
+                        </div>
+
+
+                        <div class="form-group">
+                            <div class="col-md-5">
+                                <br />
+                                @*<button class="col-md-2 form-control" onclick="window.location.href = '/ChartOfAccounts/ChartsOf_Accounts'" style="border-radius:35px;border:hidden;margin-right:10px;background-color:rgb(255, 0, 0);color:white;font-size:11px;width:98px;height:38px;font-family:Montserrat" id="return"><i class="fa fa-arrow-left"></i> &nbsp;&nbsp; Return</button>
+        <input class="col-md-2 form-control" id="submit" form="Registerform" type="submit" value="Save" style="border-radius:35px;color:white;border:hidden;background-color:#128edb;font-size:11px;width:98px;height:38px;font-family:Montserrat" />*@
+
+                                <button type="button" onclick="window.location.href = '/ChartOfAccounts/ChartsOf_Accounts'" id="btnCancel" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
+                                    <i class="material-icons mr-2">cached</i>  Return
+                                </button>
+
+                                <button type="submit" form="Registerform" id="SaveButton" class="btn btn-primary rounded rounded-lg"> Save </button>
+
+
+                            </div>
+                        </div>
+
+
+
+                    </div>
+                }
             </div>
         </div>
     </div>
-}
 </div>
+<script>
 
+    $(document).ready(function () {
+
+
+        $("#PageHeader").html("Add New Group");
+
+
+
+    })
+</script>
