--- a/SEA_Application/Views/Ledgers/Create.cshtml
+++ b/SEA_Application/Views/Ledgers/Create.cshtml
@@ -5,6 +5,17 @@
 }
 <script>
     $(document).ready(function () {
+
+
+        $("#PageHeader").html("New Account");
+
+        //$("#BreadCrumbs").append(' <li> <a href="/FinanceSummary/Index"> Home </a> <span>&gt;</span></li>');
+        //$("#BreadCrumbs").append(' <li class=""><a id="BreadCrumps1" href="/ChartOfAccounts/ChartsOf_Accounts">Chart of Accounts</a> <span>&gt;</span></li>');
+        //$("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#"> New Account  </a></li>');
+
+
+
+
         $("#LedgerGroupId").prepend("<option value='0' selected>---Select One---</option>");
         $("#LedgerHeadId").prop('disabled', true);
         $("#LedgerGroupId").prop('disabled', true);
@@ -13,7 +24,7 @@
         $("input[type='radio']").click(function () {
             debugger;
             var radioValue = $("input[name='radio']:checked").val();
-            if (radioValue=="Group") {
+            if (radioValue == "Group") {
                 $("#LedgerHeadId").prop('disabled', false);
                 $("#LedgerGroupId").prop('disabled', true);
                 $("#submit").prop('disabled', false);
@@ -28,11 +39,142 @@
         });
     })
 </script>
-<div class="col-md-4 col-sm-4 col-lg-4 tab-pane pull-right" style="margin-left:30px;margin-top:30px" id="changediv">
+
+@if (User.IsInRole("Accountant"))
+{
+    Layout = "~/Views/Shared/_AccountantDashboardLayout.cshtml";
+
+}
+else if (User.IsInRole("Admin"))
+{
+    Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
+
+}
+else
+{
+
+}
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-body p-5">
+                @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "Registerform" }))
+                {
+                    @Html.AntiForgeryToken()
+
+                    <div class="form-horizontal">
+                        @*<h4>Add New Account</h4>
+                            <hr />*@
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            <div class="col-md-6">
+                                <div class="form-group bmd-form-group my-3">
+                                    <label class="bmd-label-floating">Ledger Name</label>
+
+                                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
+                                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+                        @*<div class="form-group">
+                                <div class="col-md-3">
+                                    <span>Created By</span>
+                                    @Html.EditorFor(model => model.CreatedBy, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.CreatedBy, "", new { @class = "text-danger" })
+                                </div>
+                            </div>*@
+                        <div>
+                            <div class="form-group">
+                                <div class="col-md-6">
+                                    <div class="form-group bmd-form-group my-3">
+                                        <label class="bmd-label-floating">Starting Balance</label>
+                                        @Html.EditorFor(model => model.StartingBalance, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.StartingBalance, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+                                @*<div class="col-md-3">
+                                        <span>Current Balance</span>
+                                        @Html.EditorFor(model => model.CurrentBalance, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.CurrentBalance, "", new { @class = "text-danger" })
+                                    </div>*@
+                            </div>
+                        </div>
+
+
+
+                        <div>
+                            <div class="form-group">
+                                <div class="col-md-6">
+                                    <label class="container" style="float:left">
+                                        <input type="radio" value="Head" name="radio"><span>Group</span>
+                                        <span class="checkmark"></span>
+                                    </label>
+
+                                    @Html.DropDownList("LedgerGroupId", null, htmlAttributes: new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.LedgerGroupId, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="col-md-6">
+                                    <label class="container" style="float:left">
+                                        <input type="radio" value="Group" name="radio"><span>Accounting Head</span>
+                                        <span class="checkmark"></span>
+                                    </label>
+                                    @Html.DropDownList("LedgerHeadId", null, htmlAttributes: new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.LedgerGroupId, "", new { @class = "text-danger" })
+                                </div>
+
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-6">
+                                    @*<span>Session</span>
+                                        @Html.DropDownList("SessionId", null, htmlAttributes: new { @class = "form-control", @required = "required" })
+                                        @Html.ValidationMessageFor(model => model.SessionId, "", new { @class = "text-danger" })*@
+
+
+                                    <div class="form-row mt-4">
+                                        <div class="form-group col-md-12 bmd-form-group">
+                                            <label for="" class="bmd-label-static pl-2">Session</label>
+
+                                            @*<select class="form-control" id="LedgerGroupId" name="LedgerGroupId" required></select>*@
+                                            @Html.DropDownList("SessionId", null, htmlAttributes: new { @class = "form-control", @required = "required" })
+                                            @Html.ValidationMessageFor(model => model.SessionId, "", new { @class = "text-danger" })
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+                    </div>
+                    <button type="button" onclick="window.location.href = '/ChartOfAccounts/ChartsOf_Accounts'" id="btnCancel" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
+                        <i class="material-icons mr-2">cached</i>  Return
+                    </button>
+
+                    <button type="submit" form="Registerform" id="SaveButton" class="btn btn-primary rounded rounded-lg"> Save </button>
+                }
+
+                <div class="col-md-5 hidden">
+                    <br />
+                    @*<button class="col-md-2 form-control" onclick="window.location.href = '/ChartOfAccounts/ChartsOf_Accounts'" style="border-radius:35px;border:hidden;margin-right:10px;background-color:red;color:white;font-size:11px;width:98px;height:38px;font-family:Montserrat" id="return"><i class="fa fa-arrow-left"></i> &nbsp;&nbsp; Return</button>
+                        <input class="col-md-2 form-control" id="submit" form="Registerform" type="submit" value="Save" style="border-radius:35px;color:white;border:hidden;background-color:#128edb;font-size:11px;width:98px;height:38px;font-family:Montserrat" />*@
+
+
+                    <br />
+                    <br /><br />
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<br />
+
+<div class="col-md-4 col-sm-4 col-lg-4 tab-pane pull-left hidden" id="changediv">
 
     <div class="form-three widget-shadow">
         @using (Html.BeginForm("LedgerFromFile", "Ledgers", FormMethod.Post, new { enctype = "multipart/form-data" }))
-            {
+        {
             @Html.AntiForgeryToken()
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
@@ -41,97 +183,12 @@
                     <input id="teachers" required="required" name="Ledger" type="file" />
                 </div>
             </div>
-       
-               <input class="col-md-4 pull-right" type="submit" value="Submit" style="border-radius:35px;color:white;border:hidden;background-color:#128edb;font-size:11px;width:98px;height:38px;font-family:Montserrat" />
+
+            <input type="submit" value="Submit" class="btn btn-primary rounded rounded-lg" />
         }
     </div>
 </div>
 
-<div class="col-md-8 col-md-offset-1" style="background-color:#f1f2e5;border-radius:10px;margin-top:50px;box-shadow: rgba(0, 0, 0, 0.16) 5px 10px 5px, rgba(0, 0, 0, 0.23) 0px 3px 5px">
-    
-    @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "Registerform" }))
-    {
-        @Html.AntiForgeryToken()
-
-        <div class="form-horizontal">
-            <h4>Add New Account</h4>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                <div class="col-md-3">
-                    <span>Ledger Name</span>
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control",@required="required" } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            @*<div class="form-group">
-                <div class="col-md-3">
-                    <span>Created By</span>
-                    @Html.EditorFor(model => model.CreatedBy, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.CreatedBy, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-            <div>
-                <div class="form-group">
-                    <div class="col-md-3">
-                        <span>Starting Balance</span>
-                        @Html.EditorFor(model => model.StartingBalance, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.StartingBalance, "", new { @class = "text-danger" })
-                    </div>
-      
-                    @*<div class="col-md-3">
-                        <span>Current Balance</span>
-                        @Html.EditorFor(model => model.CurrentBalance, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.CurrentBalance, "", new { @class = "text-danger" })
-                    </div>*@
-                </div>
-            </div>
-           
-
-           
-            <div>
-                <div class="form-group">                  
-                     <div class="col-md-3"> 
-                        <label class="container" style="float:left">
-                            <input type="radio" value="Head" name="radio"><span>Group</span>
-                            <span class="checkmark"></span>
-                        </label>
-                         
-                        @Html.DropDownList("LedgerGroupId", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.LedgerGroupId, "", new { @class = "text-danger" })
-                    </div>
-                    <div class="col-md-3">                        
-                        <label class="container" style="float:left">
-                            <input type="radio" value="Group" name="radio"><span>Accounting Head</span>
-                            <span class="checkmark"></span>
-                        </label>                        
-                        @Html.DropDownList("LedgerHeadId", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.LedgerGroupId, "", new { @class = "text-danger" })
-                    </div>
-
-                </div>
-                <div class="form-group">
-                    <div class="col-md-3">
-                        <span>Session</span>
-                        @Html.DropDownList("SessionId", null, htmlAttributes: new { @class = "form-control", @required = "required" })
-                        @Html.ValidationMessageFor(model => model.SessionId, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-          
-
-          
-        </div>
-    }
-
-        <div class="col-md-5">
-            <br />
-            <button class="col-md-2 form-control" onclick="window.location.href = '/ChartOfAccounts/ChartsOf_Accounts'" style="border-radius:35px;border:hidden;margin-right:10px;background-color:red;color:white;font-size:11px;width:98px;height:38px;font-family:Montserrat" id="return"><i class="fa fa-arrow-left"></i> &nbsp;&nbsp; Return</button>
-            <input class="col-md-2 form-control" id="submit" form="Registerform" type="submit" value="Save" style="border-radius:35px;color:white;border:hidden;background-color:#128edb;font-size:11px;width:98px;height:38px;font-family:Montserrat" />
-            <br />
-            <br /><br />
-        </div>
-    </div>
 <style>
     /* The container */
     .container {
